--- a/RichEditorView/Assets/editor/style.css
+++ b/RichEditorView/Assets/editor/style.css
@@ -1,70 +1,81 @@
-/**
- * Copyright (C) 2015 Wasabeef
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
 @charset "UTF-8";
 
-:root {
-    color-scheme: light dark;
-}
-
-body, html {
+html {
     height: 100%;
 }
 
 body {
+    min-height: 100%;
     overflow: auto;
+}
+
+body, h1, h2, h3, h4, h5, h6, p {
+    font-style: normal;
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    letter-spacing: -0.3px;
+    text-align: start;
+    color: #000000;
     margin: 0;
-    font: -apple-system-body;
 }
 
-@media (prefers-color-scheme: dark) {
-    body, #editor {
-    }
+div {
+    display: block;
+    position: static;
 }
 
-#container {
-    display: table;
-    width: 100%;
-    height: 100%;
+h1 {
+    font-weight: 900;
+    font-size: 22px;
+    line-height: 26px;
+}
+
+h2 {
+    font-weight: 700;
+    font-size: 21px;
+    line-height: 25px;
+}
+
+h3 {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+}
+
+body {
+    font-weight: 400;
+    font-size: 19px;
+    line-height: 23px;
 }
 
 #editor {
     -webkit-user-select: auto !important;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    overflow: auto;
-    display: table-cell;
-    height: 100%;
 }
 
 #editor:focus {
-    outline: 0px solid transparent;
+    outline: 0 solid transparent;
 }
 
 .placeholder[placeholder]:after {
     content: attr(placeholder);
     position: absolute;
-    top: 0px;
-    color: #ccc;
+    top: 0;
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 19px;
+    line-height: 23px;
+    color: #AAAAAA;
 }
 
-h1, p, ul, ol {
-    margin: 0;
+#editor {
+    min-height: 100%;
+    height: 100%;
+    overflow: auto;
+    display: block;
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    color: #000000;
+    font-size: 19px;
+    line-height: 23px;
 }
 
-a {
-    word-break: break-all;
-    color: -apple-system-blue;
-}
